Currency: Fix button alignment on IE9.

--- a/share/spice/currency/currency.css
+++ b/share/spice/currency/currency.css
@@ -21,6 +21,10 @@
         top: -2em;
     }
 
+    .ie9 .zci--currency .btn--container .ddgsi {
+        top: -2.3em;
+    }
+
 .zci--currency .btn--container a:hover {
     color: inherit;
 }
